# python-trainee-assignment

./: .gitignore  README.md  pyproject.toml
app/: app.py
test/: test_app.py
test/fixtures/: test_matrix_2.txt
