[tool.poetry]
name = "python-trainee-assignment"
version = "0.1.0"
description = ""
authors = ["Max Odinokiy <max.odinokiy@gmail.com>"]
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
flake8 = "^5.0.4"
aiohttp = "^3.8.1"
asyncio = "^3.4.3"

[tool.poetry.scripts]
matrix_app = "app.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
